--- a/checkout.html
+++ b/checkout.html
@@ -78,7 +78,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="dashboard.html">PC Exchange</a>
+      <a class="navbar-brand" href="index.html">PC Exchange</a>
     </div>
   </nav>
 
